--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+*::-webkit-scrollbar {
+  width:8px;
+}
+ 
+*::-webkit-scrollbar-track {
+  background-color: black;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+*::-webkit-scrollbar-thumb {
+  background-color: #eee;
+  border-radius: 2px;
+  outline: 1px solid slategrey;
+}
+.grid-cols-auto-fit {
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+}
+@media(max-width:620px){
+  
+  .grid-cols-auto-fit{
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+
+  }
+}
+  
